La paginación ya funciona.
En otro orden de cosas, creo que me he reventado los géneros.

--- a/P2/base/index.base.html
+++ b/P2/base/index.base.html
@@ -38,6 +38,8 @@
  			</p>
  			<a ng-click="addToCart(movie)" href="">Añadir al carrito</a>
  		</div>
+
+ 		<p class="pagination-control"><a href="" ng-click="prevPage()">&lt;</a> <a href="" ng-click="nextPage()">&gt;</a> 
  	</div>
  </div>
 </div>
