--- a/P2/base/index.base.html
+++ b/P2/base/index.base.html
@@ -31,7 +31,7 @@
  		</p>
 
  		<div class="movies" ng-repeat="movie in movies | filter:search | slice:startIndex | limitTo:pageLength as filtered">
- 			<img src="{{movie.image}}" class="movie_img">
+ 			<img ng-src="{{movie.image}}" class="movie_img">
  			<p class="movie_title">{{movie.title}}</p>
  			<p class="movie_description">
  				{{movie.description}}
