--- a/P2/index.html
+++ b/P2/index.html
@@ -38,14 +38,14 @@
 	</header>
 
 	<!-- header.html end -->
- <div class="body-container" ng-controller="movieListController">
+<div class="body-container" ng-controller="movieListController">
  	<aside class="menu">
  		<ul>
  			<li class="filter"><a href="index.html" class="filter-title">Inicio</a></li>
  			<li class="filter">
  				<span class="filter-title">Género</span>
  				<ul class="filter-items">
- 					<li ng-repeat="movie in movies | unique:'genre'">
+ 					<li ng-repeat="movie in movies | unique:'genre' as genres">
  						<input 
  							type="radio" 
  							value="{{movie.genre}}" 
@@ -63,15 +63,14 @@
  	</aside>
 
  	<div class="scroller">
- 		<div class="main-container" 
- 		ng-controller="movieListController">
+ 		<div class="main-container">
  		<p class="pagination-control">{{startIndex}} - {{startIndex + filtered.length}} (
  			<select ng-model="pageLength" ng-options="length for length in availableLengths">
  			</select> resultados por página)
  		</p>
 
  		<div class="movies" ng-repeat="movie in movies | filter:search | slice:startIndex | limitTo:pageLength as filtered">
- 			<img src="{{movie.image}}" class="movie_img">
+ 			<img ng-src="{{movie.image}}" class="movie_img">
  			<p class="movie_title">{{movie.title}}</p>
  			<p class="movie_description">
  				{{movie.description}}
@@ -82,8 +81,7 @@
  		<p class="pagination-control"><a href="" ng-click="prevPage()">&lt;</a> <a href="" ng-click="nextPage()">&gt;</a> 
  	</div>
  </div>
-</div>
-	<!-- footer.html begin -->
+</div>	<!-- footer.html begin -->
 
 	<footer>
 		<p class="footer-text">
