Añadido un botón para limpiar el filtro de géneros.

--- a/P2/base/index.base.html
+++ b/P2/base/index.base.html
@@ -15,6 +15,16 @@
  								{{genre}}
  						</input>
  					</li>
+ 					<li>
+ 						<input 
+ 							type="radio" 
+ 							value="" 
+ 							class="filter-genre" 
+ 							ng-model="searchGenre" 
+ 							name="searchGenre">
+ 								No filtrar
+ 						</input>
+ 					</li>
  				</ul>
  			</li>
  			<li class="filter"><span class="filter-title">Año</span></li>
