--- a/P2/index.html
+++ b/P2/index.html
@@ -41,7 +41,6 @@
 <div class="body-container" ng-controller="movieListController">
  	<aside class="menu">
  		<ul>
- 			<li class="filter"><a href="index.html" class="filter-title">Inicio</a></li>
  			<li class="filter">
  				<span class="filter-title">Género</span>
  				<ul class="filter-items">
@@ -62,12 +61,38 @@
  							class="filter-genre" 
  							ng-model="searchGenre" 
  							name="searchGenre">
- 								No filtrar
+ 								Todos
  						</input>
  					</li>
  				</ul>
  			</li>
- 			<li class="filter"><span class="filter-title">Año</span></li>
+ 			
+ 			<li class="filter">
+ 				<span class="filter-title">Año</span>
+ 				<ul class="filter-items">
+ 					<li ng-repeat="year in years">
+ 					<input 
+ 							type="radio" 
+ 							value="{{year.bounds}}" 
+ 							class="filter-genre" 
+ 							ng-model="$parent.yearRange" 
+ 							name="year">
+ 								{{year.name}}
+ 						</input>
+ 					</li>
+ 					<li>
+ 						<input 
+ 							type="radio" 
+ 							value='{"min":0,"max":5000}'
+ 							class="filter-genre" 
+ 							ng-model="yearRange" 
+ 							name="yearRange">
+ 								Todos
+ 						</input>
+ 					</li>
+ 				</ul>
+ 			</li>
+ 			
  			<li class="filter"><span class="filter-title">Etc</span></li>
  		</ul>
  	</aside>
