--- a/P2/index.html
+++ b/P2/index.html
@@ -42,6 +42,11 @@
  	<aside class="menu">
  		<ul>
  			<li class="filter">
+ 				<span class="filter-title">Título</span>
+				<p class="filter-items">
+					<input type="text" ng-model="searchTitle" />
+				</p>
+ 			<li class="filter">
  				<span class="filter-title">Género</span>
  				<ul class="filter-items">
  					<li ng-repeat="genre in genres">
