--- a/P2/base/filter.html
+++ b/P2/base/filter.html
@@ -1,6 +1,11 @@
-<li class="filter">
-	<span class="filter-title">{{title}}</span>
-	<ul class="filter-items">
+<li class="filter" ng-init="showFilters = false">
+	<img src="/img/close.svg" class="close-indicator" ng-show="showFilters" />
+
+	<a href="" ng-click="showFilters = !showFilters" class="filter-title" >
+		{{title}}
+	</a>
+	
+	<ul class="filter-items" ng-show="showFilters">
 		<li ng-repeat="filter in filters">
 			<input 
 			type="radio" 
