--- a/P2/base/filter.html
+++ b/P2/base/filter.html
@@ -18,8 +18,7 @@
 		</li>
 
 		<li>
-			<input ng-init="customRange = {}"
-			type="radio" 
+			<input type="radio" 
 			value="custom"
 			class="filter-item" 
 			ng-model="internalValue" 
@@ -27,12 +26,12 @@
 				<span ng-show="filtersEnabled">Personalizado:<br /></span>
 			</input>
 			<div class="custom-selector" ng-show="customRangeEnabled" ng-class="filtersDisabledClass">
-				<input type="number" ng-model="customRange.min" /><br /> 
+				<input type="number" ng-model="customValue.min" /><br /> 
 				<span>hasta</span><br />
-				<input type="number" ng-model="customRange.max" />
+				<input type="number" ng-model="customValue.max" />
 			</div>
 			<div class="custom-selector" ng-show="customTextEnabled" ng-class="filtersDisabledClass">
-				<input type="text" ng-model="customText" />
+				<input type="text" ng-model="customValue.str" />
 			</div>
 		</li>
 
