Primer paso del validador. ¿Hemos mejorado?

--- a/P2/base/filter.html
+++ b/P2/base/filter.html
@@ -1,5 +1,5 @@
 <li class="filter" ng-init="showFilters = false">
-	<img alt="" src="/img/close.svg" class="close-indicator" ng-show="showFilters" />
+	<img alt="Cerrar" src="/img/close.svg" class="close-indicator" ng-show="showFilters" />
 
 	<a href="" ng-click="showFilters = !showFilters" class="filter-title" >
 		{{title}}
