--- a/P2/base/filter.html
+++ b/P2/base/filter.html
@@ -1,4 +1,4 @@
-<li class="filter" data-ng-init="showFilters = false">
+<div class="filter" data-ng-init="showFilters = false">
 	<img alt="Cerrar" src="/img/close.svg" class="close-indicator" data-ng-show="showFilters" />
 
 	<a href="" data-ng-click="showFilters = !showFilters" class="filter-title" >
@@ -43,4 +43,4 @@
 				Todos
 		</li>
 	</ul>
-</li>
+</div>
