--- a/P2/pages/error.html
+++ b/P2/pages/error.html
@@ -5,7 +5,21 @@
   <title>Ola k ase</title>
 </head>
 <body>
-
-
+<div class="body-container" data-ng-controller="movieListController">
+	<aside class="menu">
+	</aside>
+	<div class="scroller">
+		<div class="scroller-top">	
+			<?php	
+				session_start();
+				echo "Lo sentimos. "."\n"."Se ha producido el siguiente error: ";
+				if (isset($_SESSION['error'])) {
+					echo $_SESSION['error'];
+				}else
+					echo "Desconodico";
+				?>
+		</div>
+	</div>
+</div>
 </body>
 </html>
